# aycicdiff

./: .gitignore  Cargo.toml  README.md
docs/plans/: implementation-plan.md
examples/: rules.toml
src/: lib.rs  main.rs
src/diff/: diff_model.rs  mod.rs  tree_diff.rs
src/model/: command.rs  config_tree.rs  mod.rs  section_kind.rs  version_info.rs
src/parser/: lexer.rs  mod.rs  tree_builder.rs
src/rules/: config.rs  mod.rs
src/serialize/: bounce.rs  dependency.rs  emitter.rs  mod.rs  negation.rs
src/version/: defaults.rs  mod.rs  parser.rs  quirks.rs
tests/fixtures/: acl_running.cfg  acl_target.cfg  real_c3560cx_running.cfg  show_version_c3560cx.txt  simple_running.cfg  simple_target.cfg
tests/integration/: end_to_end.rs
