[package]
name = "aycicdiff"
version = "0.1.0"
edition = "2024"
description = "Cisco IOS/IOS-XE config diff utility — generates incremental config for copy file run"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
similar = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
indoc = "2"
